2005-11-14  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/news/index.wml: add news about referendum
	results
	* foundation.gnome.org/elections/2005/rules.wml: updated for the
	referendum results
	* foundation.gnome.org/referenda/2005-10/index.wml: ditto

2005-11-13  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/membership/members.wml: fix for email addresses

2005-11-13  Vincent Untz  <vuntz@gnome.org>

	Make the membership list dynamic.

	* foundation.gnome.org/htaccess: updated for the move of the list
	* foundation.gnome.org/membership/.cvsignore: updated
	* foundation.gnome.org/membership/Makefile.am: updated
	* foundation.gnome.org/membership/index.wml: fix link
	* foundation.gnome.org/membership/members.wml: use some PHP magic

	* foundation.gnome.org/vote/vote.wml: fix some tags for xhtml

2005-11-09  Murray Cumming <murrayc@murrayc.com>

	* foundation.gnome.org/licensing/guidelines/index.wml: 
	Replace [insert marks here] with [quote]GNOME logo and 
	GNOME name[quote], though I am not a lawyer.
	* foundation.gnome.org/licensing/usergroup/index.wml: 
	Link to the privacy policy, where needed.

2005-11-09  Murray Cumming <murrayc@murrayc.com>

	* foundation.gnome.org/legal/index.wml: Added a privacy policy, 
	taken from the GUADEC 2006 (Stuttgart) registration web site.

2005-11-07  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/include/election-sql.php:
	(elec_get_blank_votes_election): I think I have the correct query now.

2005-11-07  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/include/election-sql.php:
	(elec_get_blank_votes_election): temporary workaround to get the right
	value

2005-11-07  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/referenda/2005-10/index.wml: add links to the
	results
	* foundation.gnome.org/vote/results.wml: display the number of blank
	votes if not null
	* foundation.gnome.org/vote/include/election-sql.php: